--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -36,8 +36,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. <b style="font-size: 130%">862</b>, commit <code>4cee871</code>.</strong></p>
-<p><strong>“ledger: Added utility for fetching stock quotes from Yahoo! Finance”</strong></p>
+<p><strong>Revision No. <b style="font-size: 130%">865</b>, commit <code>84c338b</code>.</strong></p>
+<p><strong>“Documentation, clarified throttling issues under Termux”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -119,19 +119,19 @@
 <p>View changelog since the last revision as <a href="https://github.com/microsounds/atelier/compare/HEAD~1...HEAD.diff"> <code>diff HEAD~1...HEAD</code></a></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
-<p>If this document is <em>28.5KiB</em> in
+<p>If this document is <em>28.7KiB</em> in
 size, and the approximate size of all comment lines of code is
-<em>64.3KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.87%</b>
+<em>64.6KiB</em> then this document
+currently covers about <b style="font-size: 130%;">8.89%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌖 Tue, Jan 24th, 2023.</p>
+<p>Last updated 🌖 Fri, Jan 27th, 2023.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime17.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime48.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -702,11 +702,11 @@ Post-install scripts make the following adjustments statically for existing scri
 <p>Use Termux’s own provided envvar <code>$PREFIX</code> to refer to standard filesystem locations within scripts or interactively, e.g. <code>$PREFIX/tmp</code> which expands to <code>/data/data/com.termux/files/usr/tmp</code>.
 In practice, shell script shebangs don’t need to be rewritten, Termux already rewrites these with some hidden voodoo I don’t care to understand.</p>
 <h3>Background processes since Android 11<span id="Background-processes-since-Android-11"></span></h3>
-<p>The customized Android images that ship from <a href="https://dontkillmyapp.com/">Chinese and Korean manufacturers</a> since version 11 have become far more aggressive in pruning “phantom” processes (daemons) in the pursuit of better battery life.
-Backgrounding processes in the shell with the <code>&amp;</code> operator will no longer work, launching daemons will be killed immediately if not in foreground mode.</p>
+<p>The customized Android images that ship from <a href="https://dontkillmyapp.com/">Chinese and Korean manufacturers</a> since version 11 have become far more aggressive in pruning “phantom” processes (daemons) in the pursuit of better battery life.</p>
+<p>You may experience issues with processes backgrounded with the <code>&amp;</code> operator being throttled or killed when multitasking outside of Termux. <em>Daemons that fork without becoming a child process or <code>exec</code>’ing the same process that called it may be killed immediately or shortly after leaving Termux if not called in foreground mode.</em></p>
 <p>In order to prevent Android from prematurely pruning <code>ssh-agent</code> while multitasking, it is called as the parent process for the current shell.</p>
 <p>Termux developers recommend their very own <a href="https://wiki.termux.com/wiki/Termux-services">termux-services</a> for running common daemons.
-Launch daemons in foreground mode without forking and preferably with wakelock acquired from the notification bar if you wish to run a long-running task without being throttled by the operating system.</p>
+<em>Launch daemons in foreground mode in another terminal instance without forking and preferably with wakelock acquired from the notification bar if you wish to run a long-running task without being throttled by the operating system.</em></p>
 <h2><code>cd</code><span id="cd"></span></h2>
 <ul>
 <li>
@@ -985,13 +985,13 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-210.79KiB
+212.09KiB
 out of a total compressed git history size of
-765.52KiB.</em></p>
+773.07KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
 <pre><code><span class="term-prompt">microsounds@shami</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
--rw-r--r-- 1 8.7K   Dec 30 2022 15:47 rev. 134 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
+-rw-r--r-- 1 9.8K   Jan 27 2023 13:03 rev. 136 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Oct 19 2022 14:48 rev. 79  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
 -rw-r--r-- 1  604   Jan 17 2022 18:01 rev. 4   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/chromium/local_state.conf">.config/chromium/local_state.conf</a>
@@ -1126,10 +1126,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  29K   Jan 20 2023 22:38 rev. 185 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  29K   Jan 27 2023 13:04 rev. 186 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Tue, 24 Jan 2023 19:39:38 -0800 -->
+<!-- updated Fri, 27 Jan 2023 13:04:32 -0800 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
