notes/figures: Added sakura micker v3 SPM figure

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/1/10 -->
+<!-- updated 2023/1/28 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌒 Tue, Jan 10th, 2023</p>
+<p>Last updated 🌗 Sat, Jan 28th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
@@ -129,6 +129,7 @@ var figs = [
 	[ '1536238', 're-ment miku miku ♪ room miniature #8 of 8' ],
 
 */
+	[ '1335582', 'sega sakura miku v3 SPM' ],
 	[ '1571286', 'sega miku christmas 2022 SPM' ],
 	[ '1479579', 'sega miku 15th anniversary kei ver. SPM' ],
 	[ '1549222', 'sega miku 15th anniversary zhou ver. SPM' ],
