added platitude, changed link on 1mb.club

--- a/index.htm
+++ b/index.htm
@@ -148,7 +148,7 @@ copy-pasted directly from someone's website.</em>
 <a href="/static/button/badge.gif" title="animated version"><img src="/static/button/badge.gif" alt="ico-badge" /></a></p>
 <p><span class="aside">Best viewed at 380px or wider, feel free to use my meme badge on your own site.</span>
 <br/>
-<span class="aside">A member site of <a href="https://1mb.club">1MB Club</a>, written in <a href="https://github.com/microsounds/microsounds.github.io#-validation">polyglot HTML5</a>, reject JS frameworks and spit on all their advocates!</span></p>
+<span class="aside">A member site of <a href="https://1mb.club#:~:text=microsounds.github.io">1MB Club</a>, written in <a href="https://github.com/microsounds/microsounds.github.io#-validation">polyglot HTML5</a>, reject JS frameworks and spit on all their advocates!</span></p>
 </div>
 <script type="text/javascript">
 /* <![CDATA[ */
