--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -44,7 +44,8 @@ Most are <em>“prize figures”</em> of the variety you could win from a Japane
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
 <p>Since I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them, this page that piggybacks off their API will do for now. Links will take you to their catalog entry on <em>mfc</em>.</p>
 <h2>Collection<span id="Collection"></span></h2>
-<p><em>They’re in no particular order, only sorted by date I remember getting it, probably.</em></p>
+<p><em>Sorted by when I remember getting it, from newest to oldest.<br/>
+If images are broken it means MFC is down again.</em></p>
 <div id="fig-thumbs">
 <noscript>
 <blockquote>
