notes/figures: Footnotes, nothing important

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -42,7 +42,7 @@
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
-<p>Since I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them, this page that piggybacks off their API will do for now. Links will take you to their catalog entry on <em>mfc</em>.</p>
+<p>Since I don’t feel like actually making an account on <em><a href="https://myfigurecollection.net">myfigurecollection.net</a></em> to tell people about them, this page that piggybacks off their API will do for now. Links will take you to their catalog entry on <em>mfc</em><sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup>.</p>
 <h2>Collection<span id="Collection"></span></h2>
 <p><em>Sorted by when I remember getting it, from newest to oldest.</em></p>
 <div id="fig-thumbs">
@@ -85,7 +85,7 @@ I remember when <em>“replica”</em> nendoroids were a fringe hobby good releg
 <li>faces that just look “off”, screenprinted eyes that have a <a href="https://myfigurecollection.net/picture/2182516">bizarre skew</a></li>
 <li>individual parts that won’t fit together correctly or won’t stay snug</li>
 <li>designs standing on one leg that cannot hold their own weight and bend at a steep angle</li>
-<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn1" id="fnref1">1</a></sup></li>
+<li>designs that <a href="https://myfigurecollection.net/picture/3267308">don’t actually exist</a>, combinations of 2 or more characters at the same time<sup class="footnote-ref"><a href="#fn2" id="fnref2">2</a></sup></li>
 <li>paint fading quickly even in interior lights from store displays</li>
 <li>visible molding seams <em>(flash)</em>, ABS plastics yellowing, PVC vinyls leaking plasticizer and turning sticky</li>
 <li><a href="https://myfigurecollection.net/picture/2529349">sloppy paint, gloppy paint</a> and paint overspray, a complete disregard for quality</li>
@@ -229,8 +229,11 @@ for (var i in figs) {
 <section class="footnotes">
 <ol>
 <li id="fn1">
+<p>Note: If images are broken it means mfc <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">changed their API endpoints again</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+</li>
+<li id="fn2">
 <p>A wild new frontier in bootlegs, this is a combination of
-<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<a href="https://myfigurecollection.net/item/1047417">this Rem</a> and <a href="https://myfigurecollection.net/item/944728">this Miku</a>. <a href="#fnref2" class="footnote-backref">↩</a></p>
 </li>
 </ol>
 </section>
